--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="login">登录</string>
     <string name="loading">加载中&#8230;</string>
     <string name="cancel">取消</string>
+    <string name="register">注册</string>
 </resources>
